--- a/The Math/OnboardingJournalView.xib
+++ b/The Math/OnboardingJournalView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -28,9 +28,7 @@
                                     <variation key="heightClass=regular-widthClass=compact" constant="286"/>
                                 </constraint>
                             </constraints>
-                            <string key="text">Write your self a quick note to recall the moment later: Why were you stressed? Why did you feel good?
-
-Use the Categories to help understand how your moods relate to different areas of your life.</string>
+                            <string key="text">Write a quick note to recall the moment later. Use the Categories to help understand how your moods relate to different areas of your life.</string>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
